﻿v1.4.2

Rift
* Change: Requires at least Rift 2.2

General
* Fixed: Issue with rare start-up error (137)

Percentage Monitor
* Fixed: Prevented Axis errors with Percentage Monitor free resize.

Ready Check
* New: Added Stellar Prismatic Wellspring (All, 60, High)
* New: Added Flaring Sigil (Mage, Cleric, 60, Medium)

LibSBuff
* Change: Now converted over to new Rift 2.2 API Event system.

Triggers
* New: Method added Trigger:AddAlertSeq(AlertObj, Player = true/false) - Adds an Alert Object to the Alert sequence list for a created Trigger.
* New: Method added Trigger:AddTimerSeq(TimerObj) - Adds a Timer Object to the Timer sequence list for a created Trigger.
* New: Method added Trigger:ResetAlertSeq() - Resets the counter for the Alert sequence position.
* New: Method added Trigger:ResetTimerSeq() - Resets the counter for the Timer sequence position
* New: Method added Trigger:ResetSeq() - Resets both Timer and Alert positions.
* Fixed: Timers which trigger after another timer are working again. (ForceStop was flagged always on /rolleyes)

Encounters
* Merged with KBM Public Encounters (Details to be updated)

Endless Eclipse
* Progenitor Saetos
** Fixed: Now returns correct Boss Objects for each boss. (Phase Monitor updates will be working)

Translations
* German Updates.
* French Updates.
----
v1.4.1

Menu
* New: The menu window will now remember which Rift tab you were last in (Base or Storm Legion).

Encounters
* New: When an encounter triggers a victory, all tracked units are entered in to an Ignore List to prevent residual units re-trigger the same encounter.
* Note: Using /kbmreset will force clear this list in the rare events of false positives.

LibSUnit
* Change: When units enter a Partial state, their Combat flag is forced to false.
* Change: When units die, their Combat flag is forced to false.

Mechanic Timers
* New: Repeating and Wait timers can now be forced to stop by using KBM.MechTimer:AddRemove(Timer, true)