@@ -75,31 +75,41 @@ KBM.RegisterMod(DLG.ID, DLG)
 DLG.Lang.Unit = {}
 DLG.Lang.Unit.Goloch = KBM.Language:Add("Dread Lord Goloch")
 DLG.Lang.Unit.Goloch:SetGerman("Schreckensfürst Goloch")
+DLG.Lang.Unit.Goloch:SetFrench("Seigneur lugubre Goloch")
 DLG.Lang.Unit.GolochShort = KBM.Language:Add("Goloch")
 DLG.Lang.Unit.GolochShort:SetGerman("Goloch")
+DLG.Lang.Unit.GolochShort:SetFrench("Goloch")
 
 -- Ability Dictionary
 DLG.Lang.Ability = {}
 DLG.Lang.Ability.Days = KBM.Language:Add("End of Days")
+DLG.Lang.Ability.Days:SetFrench("La fin des temps")
 DLG.Lang.Ability.Glimpse = KBM.Language:Add("Glimpse of Mortality")
+DLG.Lang.Ability.Glimpse:SetFrench("Lueur de mortalité")
 DLG.Lang.Ability.Baleful = KBM.Language:Add("Baleful Smash")
+DLG.Lang.Ability.Baleful:SetFrench("Coup funeste")
 
 -- Debuff Dictionary
 DLG.Lang.Debuff = {}
 DLG.Lang.Debuff.Dread = KBM.Language:Add("Dread Scythe")
+DLG.Lang.Debuff.Dread:SetFrench("Faux d'effroi")
 DLG.Lang.Debuff.Curse = KBM.Language:Add("Gatekeeper's Curse")
 DLG.Lang.Debuff.Torment = KBM.Language:Add("Lingering Torment")
+DLG.Lang.Debuff.Torment:SetFrench("Tourment persistant")
 DLG.Lang.Debuff.Glimpse = KBM.Language:Add("Glimpse of Mortality")
+DLG.Lang.Debuff.Glimpse:SetFrench("Lueur de mortalité")
 
 -- Buff Dictionary
 DLG.Lang.Buff = {}
 DLG.Lang.Buff.Days = KBM.Language:Add("End of Days")
+DLG.Lang.Buff.Days:SetFrench("La fin des temps")
 DLG.Lang.Buff.Quiet = KBM.Language:Add("Quiet Fears")
 
 -- Description Dictionary
 DLG.Lang.Main = {}
 DLG.Lang.Main.Descript = KBM.Language:Add("Dread Lord Goloch")
 DLG.Lang.Main.Descript:SetGerman("Schreckensfürst Goloch")
+DLG.Lang.Main.Descript:SetFrench("Seigneur lugubre Goloch")
 DLG.Descript = DLG.Lang.Main.Descript[KBM.Lang]
 
 -- Assign Boss to Language Specific Dictionary
